correction du gap unlogedIndex

--- a/css/stylegrid.css
+++ b/css/stylegrid.css
@@ -8,7 +8,7 @@
 
 .sectionUser {
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 15px;
   grid-template-columns: [nav-start] 15% [nav-end] auto [main-end] 25% [aside-end];
   grid-template-rows: [head-start] 5% [head-end] auto [body-end];
   grid-template-areas: 
@@ -56,9 +56,9 @@
 
 .section {
   display: grid;
-  grid-gap: 10px;
+  /*grid-gap: 10px;*/
   grid-template-columns: auto;
-  grid-template-rows: [head-start] 5% [head-end] auto [body-end] 300px [footer-end];
+  grid-template-rows: [head-start] auto [head-end] auto [body-end] 300px [footer-end];
   grid-template-areas: 
   "menu"
   "main"
